<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_LCLSMotionError" Id="{5153d9be-7a34-4186-ae7e-49662e9c16b6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE E_LCLSMotionError :
(
    ABORTED := 16#7900,
    UNSAFE := 16#7901,
    INVALID := 16#7902,
    TEST := 16#FFFF
)UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>